2005-03-13  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override (_wrap_gtk_tree_store_reorder): Ditto

2005-03-13  Richard Hult  <richard@imendio.com>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_reorder): You
	don't own a ref on the return value from PyList_GetItem so don't
	decrease the ref count.

2005-03-10  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override:
	(_wrap_gtk_list_store_insert): Use
	gtk_list_store_insert_with_valuesv, improves performance
	when using a sorted list.

	* configure.in: Post release version bump

=== PyGTK 2.6.0 ===
2005-03-07  Johan Dahlin  <jdahlin@async.com.br>

	* README: Remove ftp.gtk.org url
	
	* NEWS: Updated.

2005-03-04  Manish Singh  <yosh@gimp.org>

	* configure.in: document micro_version as micro version.

	* gtk/gtktreeview.override
	* gtk/libglade.override: get rid of a couple unnecessary G_OBJECT()
	casts.

2005-02-23  Cedric Gustin  <cedric.gustin@swing.be>

	* gobject/pygtype.c (add_property_docs): Use G_CONST_RETURN with a
	gchar* return value.

2005-02-23  Johan Dahlin  <johan@gnome.org>

        * configure.in: post release version bump
	
	* examples: Don't use gtk.TRUE/gtk.FALSE anymore.

=== PyGTK 2.5.4 ===
2005-02-23  Johan Dahlin  <johan@gnome.org>

	* README, NEWS: Update
	
2005-02-23  Cedric Gustin  <cedric.gustin@swing.be>

	* setup.py: Move the install_template call for pygobject-2.0.pc.in
	to the right place in the script. Also define PLATFORM_WIN32 on
	win32. Fixes bug #150616.
	* codegen/codegen.py: Do not write the 'pygtk class init' function
	for objects whose type is explicitly ignored (like GtkPlug and
	GtkSocket on win32). Otherwise, it generates glib-warnings related
	to calls to g_object_set_qdata with a NULL 'node'.
	* gobject/pygtype.c: Do not use g_string_append_printf with a NULL
	argument, as it crashes on win32. Fixes bug #166546.
	* gtk/gtk.override: Add GtkSocket__proxy_do_plug_added,
	GtkSocket__proxy_do_plug_removed and GtkPlug__proxy_do_embedded to