@@ -1,3 +1,8 @@
+2005-03-14  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/pygparamspec.c (pyg_param_spec_getattr): In case the
+	enum is not registered, set enum_class or flag_class to None
+
 2005-03-13  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtktreeview.override (_wrap_gtk_tree_store_reorder): Ditto
